--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,7 @@
-.poke-list{
+/* .poke-list{
+
     background: url(http://wallpapers.net/web/wallpapers/starter-pokemon-hd-wallpaper/1080x608.jpg) no-repeat;
+    background-size: cover;
     width: 90%;
     height: 90%;
     display: inline-grid;
@@ -12,6 +14,7 @@
 
 
 }
+
 .header-center{
     margin: 20px;
     margin-bottom: 40px;
@@ -20,9 +23,9 @@
 }
 
 .poke-container{
-    
   
-  
+  width: 130px;
+  height: 130px;  
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
   border-radius: 5px;
   background-color: rgba(255, 255, 255, .15);
@@ -31,6 +34,42 @@
 
 
 }
+
+.button-next{
+  /* background styles */
+  width: 90px;
+  height: 50px;
+	position: relative;
+	display: inline-block;
+	/* padding: 15px 25px; */
+	background-color: rgb(78, 81, 78); /*for compatibility with older browsers*/
+	background-image: linear-gradient(rgb(51, 58, 51),rgb(203, 206, 203));
+  border-radius: 20px;
+
+	/* text styles */
+	text-decoration: none;
+	color: rgb(16, 16, 16);
+	font-size: 25px;
+	font-family: sans-serif;
+	font-weight: 100;
+  text-align: center;
+
+
+}
+
+.button-next::after{
+  content: '';
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	width: calc(100% - 4px);
+	height: 50%;
+	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.2));
+
+
+}
+
+
 
 .pokemon-card{
     
@@ -41,6 +80,6 @@
 .poke-name-text{
 
 
-}
+} */
 
 
